tests/neg/anonymous-instance-cannot-be-empty.scala
object Test {
  extension on[T] (t: T) { } // error
}